# clifford

./: Cargo.toml  README.md
ganja/: Cargo.toml
ganja/src/: lib.rs  pga3d.rs  quat.rs
pga3d/: Cargo.toml
pga3d/src/: lib.rs  pga3d.rs
src/: lib.rs  multivector.rs
src/multivector/: tests.rs
tests/: pga3d.rs
