[package]
name = "clifford"
version = "0.1.0"
authors = ["Øystein Hovind <hovindo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]
members = [
    "ganja",
]

[dev-dependencies]
ganja = { path = "ganja" }
quickcheck = "1.0.3"
